# gstatus

./: .gitignore  COPYING  Cargo.toml  Makefile  README
archlinux/: PKGBUILD
src/: batteries.rs  battery.rs  clock.rs  main.c  main.d  main.rs  mem.rs  module.rs  sys.c  sys.h  uevent.rs  util.c  util.h
