[package]
name = "gstatus"
version = "0.1.0"
authors = ["Greg Depoire--Ferrer <greg.depoire@gmail.com>"]
edition = "2018"

[dependencies]
libc = "0.2"

[dependencies.time]
version = "0.3.9"
# Disable default features to build faster and to build a smaller executable.
default-features = false
features = ["local-offset"]

[profile.release]
# Tweaks to build a smaller executable.
lto = true
codegen-units = 1
panic = "abort"
